flux/traefik/audiobookshelf-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf-ingress
  namespace: audiobookshelf
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure  # For Traefik ingress controller
spec:
  rules:
  - host: audiobookshelf.jhome.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: audiobookshelf-service
            port:
              number: 80
